--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=8080
 spring.security.user.name=admin
 spring.security.user.password=12
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/hasiyatech
 spring.datasource.username=root
 spring.datasource.password= H@M+cd99
